# lama

./: .gitignore  DATASET_STRUCTURE.md  ENVIRONMENT_SETUP.md  LaMa_inpainting.ipynb  PR_MESSAGE.md  README.md  README_NEW.md  SETUP_SUMMARY.md  bin_analysis.md  conda_env.yml  conda_env_gpu.yml  environment.yml  example_usage.py  export_LaMa_to_onnx.ipynb  export_onnx.py  inference.py  pyproject.toml  pytest.ini  requirements.txt  requirements_alternative.txt  setup.py  setup.sh  setup_environment.sh  setup_fix.py  startup.py  test_config.py  test_installation.py  train.py
.github/workflows/: ci.yaml
checkpoints/: epoch=0-step=8.ckpt
clean_lama/: .gitignore  README.md  requirements.txt  setup.py
clean_lama/configs/: train.yaml
clean_lama/scripts/: export_onnx.py  inference.py  train.py
clean_lama/src/: __init__.py
cleanlama/: __init__.py  cli.py  export_onnx.py  inference.py  train.py
configs/: config.yaml  export.yaml  infer.yaml  train.yaml
configs/data/: places365.yaml
configs/logger/: tensorboard.yaml  wandb.yaml
configs/model/: lama_ffc.yaml
configs/training/: default.yaml
env/: conda.yaml
examples/: quickstart.md
inpaint/: __init__.py  cli.py
lama_clean/: .gitignore  MANIFEST.in  README.md  requirements.txt  setup.py
scripts/: export_onnx.py  export_onnx.sh  export_to_onnx.sh  infer.py  inference.sh  onnx_inference.sh  post_install.sh  setup_env.sh  train.py  train.sh
src/: __init__.py  cli.py  export_onnx.py  infer.py  lightning_module.py  train.py
tests/: conftest.py  test_cli_smoke.py  test_forward.py  test_imports.py
(+39 files in other folders)
